# dotmapdict

./: README.MD  pyproject.toml  setup.py
dotmapdict/: dottydict.py
dottydict/: __init__.py
tests/: test_dotmapdict.py  test_dottydict.py
