[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmapdict"
version = "1.0.0"
description = "A dictionary that supports dot notation access"
readme = "README.MD"
license = { file = "LICENSE" }
keywords = ["dictionary", "dot notation", "access", "nested", "dot", "dict", "dotdict"]
authors = [
    { name = "Mohammad Sarabi", email = "m.sarabi.jkd@gmail.com" },
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/m-sarabi/dotmapdict"
Documentation = "https://github.com/m-sarabi/dotmapdict"
Repository = "https://github.com/m-sarabi/dotmapdict"
Issues = "https://github.com/m-sarabi/dotmapdict/issues"
Changelog = "https://github.com/m-sarabi/dotmapdict/blob/main/CHANGELOG.MD"